--- a/src/components/LandingPage/Newsletter/logo-slider/logo-newsletter.css
+++ b/src/components/LandingPage/Newsletter/logo-slider/logo-newsletter.css
@@ -3,7 +3,7 @@ body {
   justify-content: center;
 }
 
-@keyframes login-scroll {
+@keyframes main1-page-scroll {
   0% {
     transform: translateX(0);
   }
@@ -12,44 +12,47 @@ body {
   }
 }
 
-.login-logo-slider {
-  position: relative;
-  padding: 5vh 0 10vh 0; /* Adjusted padding */
-}
-
-.login-top-left {
+.main1-page-top-left {
   margin-bottom: 1vh;
   font-weight: 700;
-  margin-left: 40%;
-  padding: 2vh 2vh;
+  flex: 1;
+  justify-content: center;
+  text-align: center;
 }
 
-.login-slider {
-  height: 150px; /* Adjust height */
+.main1-page-slider {
+  height: 100px;
   margin: auto;
   overflow: hidden;
   position: relative;
   width: 100%;
+  padding-top: 5vh;
+  padding-bottom: 30vh;
 }
 
-.login-slider .login-slide-track {
+.main1-page-slider .main1-page-slide-track {
   display: flex;
-  width: calc(300px * 14);
-  animation: login-scroll 20s linear infinite;
-  gap: 2vh;
+  width: calc(250px * 14);
+  animation: main1-page-scroll 20s linear infinite;
+  gap: 6vh;
 }
 
-.login-slider .login-slide-track img {
-  height: 100px; /* Adjusted height */
-}
-
-.login-slider .login-slide {
-  width: 200px; /* Adjusted width */
+.main1-page-slider .main1-page-slide {
+  height: 100px;
+  width: 250px;
   flex: none;
 }
 
-.login-selected-logo {
-  display: block;
-  margin: auto;
-  height: 100px; /* Adjust height */
+@media (max-width: 600px) {
+  .main1-page-top-left {
+    flex: 1;
+    justify-content: center;
+    text-align: center;
+  }
+  .main1-page-slider .main1-page-slide-track {
+    width: calc(150px * 12);
+  }
+  .main1-page-slider .main1-page-slide {
+    width: 150px;
+  }
 }
