--- a/src/components/LoginNewsletter/logo-logim.css
+++ b/src/components/LoginNewsletter/logo-logim.css
@@ -3,7 +3,7 @@ body {
   justify-content: center;
 }
 
-@keyframes newsletter-scroll {
+@keyframes login-scroll {
   0% {
     transform: translateX(0);
   }
@@ -12,19 +12,19 @@ body {
   }
 }
 
-.newsletter-logo-slider {
+.login-logo-slider {
   position: relative;
   padding: 5vh 0 10vh 0; /* Adjusted padding */
 }
 
-.newsletter-top-left {
+.login-top-left {
   margin-bottom: 1vh;
   font-weight: 700;
   margin-left: 40%;
   padding: 2vh 2vh;
 }
 
-.newsletter-slider {
+.login-slider {
   height: 150px; /* Adjust height */
   margin: auto;
   overflow: hidden;
@@ -32,24 +32,24 @@ body {
   width: 100%;
 }
 
-.newsletter-slider .newsletter-slide-track {
+.login-slider .login-slide-track {
   display: flex;
   width: calc(300px * 14);
-  animation: newsletter-scroll 20s linear infinite;
+  animation: login-scroll 20s linear infinite;
   gap: 2vh;
 }
 
-.newsletter-slider .newsletter-slide-track img {
+.login-slider .login-slide-track img {
   height: 100px; /* Adjusted height */
 }
 
-.newsletter-slider .newsletter-slide {
+.login-slider .login-slide {
   height: 100px; /* Adjusted height */
   width: 200px; /* Adjusted width */
   flex: none;
 }
 
-.newsletter-selected-logo {
+.login-selected-logo {
   display: block;
   margin: auto;
   height: 100px; /* Adjust height */
@@ -57,14 +57,14 @@ body {
 
 /* Mobile Styles */
 @media (max-width: 768px) {
-  .newsletter-slider .newsletter-slide-track {
+  .login-slider .login-slide-track {
     width: calc(200px * 12);
   }
-  .newsletter-slider .newsletter-slide {
+  .login-slider .login-slide {
     width: 200px;
     height: 100px;
   }
-  .newsletter-top-left {
+  .login-top-left {
     margin-left: 35%;
   }
 }
