--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -64,7 +64,7 @@
   justify-content: center;
   width: 100%;
   padding-bottom: 20vh;
-  margin-top: -20vh5;
+  margin-top: -20vh;
 }
 
 #space-button1 {
