--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -102,11 +102,11 @@
   }
 
   #line-homepage{
-    margin-top: -20vw;
+    margin-top: -40vw;
   }
 
   #space-button1 {
-  margin-top: 30px;
+  margin-top: 15vh;
   padding: 10px 20px;
   font-size: 18px;
   cursor: pointer;
