--- a/src/components/LandingPage/section3/section3.css
+++ b/src/components/LandingPage/section3/section3.css
@@ -62,7 +62,10 @@
   display: none;
 }
 @media (min-width:0px) and (max-width:600px) {
-    .wrapper {
+  .finalC{
+    margin-top: 10vh;
+  }  
+  .wrapper {
         flex-direction: column;
         align-items: top;
         justify-content: center;
