--- a/src/components/LandingPage/FAQ/FAQ.css
+++ b/src/components/LandingPage/FAQ/FAQ.css
@@ -82,8 +82,8 @@
         }
         
         .category, .category1 {
-            font-size: 18px;
-            margin-left: 20px;
+            font-size: 20px;
+            margin-left: 24px;
             justify-content: left;
             text-align: left;
         }
@@ -91,7 +91,7 @@
         .accordion-container {
             margin-left: 20px;
             margin-right: 20px;
-            font-size: smaller;
+            font-size: 2vh;
             justify-content: left;
             text-align: left;
             max-width: 600px; /* Set max-width to 600px for smaller screens */
