--- a/src/components/LoginNewsletter/LoginNewsletter.css
+++ b/src/components/LoginNewsletter/LoginNewsletter.css
@@ -1,86 +1,64 @@
-.main-container-login {
+.nav{
+  margin-top: -2vh;
+}
+.login-main {
   display: flex;
-  height: 85vh;
 }
 
-.left-side {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 2rem;
+.side-left {
+  padding: 20px;
+  color: white;
+  text-align: center;
 }
 
-.logos {
+.side-left h1 {
+  font-size: 2rem;
+}
+
+.side-left .logos-carousel {
+  margin-bottom: 20px;
+  overflow: hidden;
+}
+
+.side-left form {
   width: 100%;
-  max-width: 900px;
+  max-width: 300px;
+  margin: 0 auto;
 }
 
-.form-container {
+.form-select,
+.form-input {
   width: 100%;
-  max-width: 500px;
-  margin-top: -12vh;
-  /* height: 800vh; */
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
-.form-group {
-  margin-bottom: 1rem;
-}
 
-.form-group label {
-  display: block;
-  margin-bottom: 0.5rem;
-}
-
-.form-group select,
-.form-group input {
+button {
   width: 100%;
-  padding: 0.75rem;
-  border: 1px solid #ccc;
-  border-radius: 0.5rem;
-}
-
-button[type="submit"] {
-  width: 100%;
-  padding: 0.75rem;
-  background-color: #37B6FF;
+  padding: 10px;
+  background-color: #007bff;
   color: white;
   border: none;
-  border-radius: 0.5rem;
+  border-radius: 5px;
   cursor: pointer;
-  transition: background-color 0.3s;
+  font-size: 1rem;
 }
 
-button[type="submit"]:hover {
+button:hover {
   background-color: #0056b3;
 }
 
-.right-side {
+.side-right {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.right-side img {
+.side-right img {
   max-width: 100%;
-  height: auto; /* Ensure height is auto */
-  margin-top: -5vh;
-  height: 70vh;
-}
-
-/* Mobile Styles */
-@media (max-width: 600px) {
-  .main-container-login{
-    height: 120vh;
-  }
-  .left-side {
-    width: 100%;
-  }
-  .nav {
-    display: none;
-  }
-  .right-side {
-    display: none !important;
-  }
-
+  height: auto;
 }
