--- a/src/components/LandingPage/Newsletter/Hero/Hero.css
+++ b/src/components/LandingPage/Newsletter/Hero/Hero.css
@@ -118,7 +118,7 @@
         display: block;
         background-color: #4285f4;
         color: white;
-        padding: 0.75rem 1.0rem;
+        padding: 1vh 1.9vh;
         border: none;
         cursor: pointer;
         font-size: 1rem;
