--- a/src/components/LoginNewsletter/LoginNewsletter.css
+++ b/src/components/LoginNewsletter/LoginNewsletter.css
@@ -60,14 +60,27 @@ button:hover {
   max-width: 100%;
   height: auto;
 }
-@media (max-width:600px) {
-    .side-right {
-      display: none;
-    }
-    .side-left {
-      width: 100%;
-    }
-  .nav{
-      display: none;
+@media (max-width: 600px) {
+  .login-main{
+    padding-top: 1vh;
+  }
+  .nav {
+    display: none;
+  }
+  .side-left {
+    width: 100%;
+  }
+  .side-right {
+    display: none;
+  }
+  .logos-carousel{
+    width: 200%;
+  }
+  .text-center{
+    overflow: hidden;
+  }
+  .field1{
+    /* height: 5]vh; */
+    overflow: hidden;
   }
 }
