--- a/src/components/LoginNewsletter/Navbar/Navbar3.css
+++ b/src/components/LoginNewsletter/Navbar/Navbar3.css
@@ -40,7 +40,7 @@
 }
 
 .highlighted {
-  background-color: #0056b3;
+  background-color: #37B6FF;
   color: white;
   border-radius: 50px;
   padding: 10px 20px;
